hphp/hack/test/enum_class_label/typing/enum_class_missing_attribute.php.exp
File "enum_class_missing_attribute.php", line 15, characters 5-6:
Enum class labels are not allowed in this position. They are only allowed in function calls) (Typing[4396])
